--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,9 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.16.8'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+
 }
 apply plugin: 'realm-android'
